<resources>
    <string name="app_name">Assgt0-Final1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="j">COP 290</string>
    <string name="title_activity_final_screen">FinalScreen</string>
    <string name="YourTeam">Your team</string>
    <string name="Message">Congratulations!</string>
    <string name="TeamName">Team Name</string>
    <string name="Username">Usernames</string>
    <string name="Content">Your registration was successful</string>
    <string name="EntryNo">Entry No.</string>
    <string name="Name1">Name_1</string>
    <string name="Name2">Name_2</string>
    <string name="Name3">Name_3</string>
    <string name="No1">EntryNo.1</string>
    <string name="No2">EntryNo.2</string>
    <string name="No3">EntryNo.3</string>
    <string name="Button_Text">Register Another Team</string>
    <string name="teamreg">Team Registration</string>
    <string name="font">sans-serif-medium</string>
    <string name="question">Do you want to register another team?</string>

    <string name="title_activity_animation">Animation</string>
    <string name="title_activity_my_first_animation">MyFirstAnimation</string>

</resources>
