<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edf182">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nikhil.ayush.aditi.assgt0_final1.FinalScreen"
    android:background="#edf182">\
        \
   >

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:id="@+id/Final_Layout"
    android:animateLayoutChanges="true">
    <!--    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nikhil.ayush.aditi.assgt0_final1.FinalScreen"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Message"
        android:id="@+id/CongratsText"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="#c72f1e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/YourTeam"
        android:id="@+id/yourteam"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_below="@+id/context"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:textColor="#2847ac" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TeamName"
        android:id="@+id/TeamName"
        android:layout_alignTop="@+id/yourteam"
        android:layout_toRightOf="@id/yourteam"
        android:layout_marginLeft="24dp"
        android:textColor="#7c8a05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Content"
        android:id="@+id/context"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/CongratsText"
        android:layout_centerHorizontal="true"
        android:textColor="#7c8a05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Username"
        android:id="@+id/Names"
        android:textStyle="bold"
        android:layout_below="@+id/yourteam"
        android:layout_marginTop="28dp"
        android:layout_alignLeft="@+id/yourteam"
        android:layout_alignStart="@+id/yourteam"
        android:textColor="#23571c" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EntryNo"
        android:id="@+id/entry"
        android:textStyle="bold"
        android:layout_alignTop="@+id/Names"
        android:layout_toRightOf="@id/Names"
        android:layout_marginLeft="60dp"
        android:textColor="#23571c"
        android:password="false"
        android:phoneNumber="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Name1"
        android:id="@+id/Name_1"
        android:layout_below="@+id/Names"
        android:layout_alignLeft="@+id/Names"
        android:layout_alignStart="@+id/Names"
        android:layout_marginTop="23dp"
        android:textColor="#7c8a05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Name2"
        android:id="@+id/Name_2"
        android:layout_below="@+id/Name_1"
        android:layout_alignLeft="@+id/Name_1"
        android:layout_alignStart="@+id/Name_1"
        android:layout_marginTop="24dp"
        android:textColor="#7c8a05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Name3"
        android:id="@+id/Name_3"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/Name_2"
        android:layout_alignLeft="@+id/Name_2"
        android:layout_alignStart="@+id/Name_2"
        android:textColor="#7c8a05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/No1"
        android:id="@+id/Entry1"
        android:layout_alignTop="@+id/Name_1"
        android:layout_alignLeft="@+id/entry"
        android:layout_alignStart="@+id/entry"
        android:textColor="#7c8a05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/No2"
        android:id="@+id/Entry2"
        android:layout_alignTop="@+id/Name_2"
        android:layout_alignLeft="@+id/Entry1"
        android:layout_alignStart="@+id/Entry1"
        android:textColor="#7c8a05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/No3"
        android:id="@+id/Entry3"
        android:layout_alignBottom="@+id/Name_3"
        android:layout_alignLeft="@+id/Entry2"
        android:layout_alignStart="@+id/Entry2"
        android:textColor="#7c8a05" />

    <Button
        android:textColor="#FFFFFF"
        android:textSize="15sp"

        android:layout_width="205dp"
        android:layout_height="35dp"
        android:background="@drawable/buttonshape2"
        android:text="@string/Button_Text"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:onClick="Register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question"
        android:id="@+id/SmallText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

</ScrollView>
</android.support.v4.widget.DrawerLayout>